--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -703,6 +703,7 @@ body {
 body {
   background: #f8e793;
   font-size: 20px;
+  overflow: hidden;
   line-height: 1.6;
   font-family: Raleway, Helvetica, sans-serif;
   color: #2E2D33;
@@ -835,7 +836,15 @@ header {
       right: -webkit-calc(50% - 2vh);
       right: calc(50% - 2vh);
       height: 4vh;
-      width: 4vh; }
+      width: 4vh;
+      cursor: pointer;
+      -webkit-transition: -webkit-transform 400ms ease-in-out;
+              transition: transform 400ms ease-in-out; }
+      header nav svg path {
+        fill: #2E2D33; }
+      header nav svg:hover {
+        -webkit-transform: rotateZ(-180deg);
+                transform: rotateZ(-180deg); }
     header nav ul {
       -webkit-box-flex: 1;
       -webkit-flex-grow: 1;
@@ -936,7 +945,13 @@ header {
                 -ms-flex-item-align: center;
                     align-self: center; }
             header nav ul li a {
-              font-size: 8vh; } }
+              font-size: 8vh;
+              color: #2E2D33;
+              text-decoration: none;
+              border-bottom: 1px solid #2E2D33; }
+              header nav ul li a a:hover, header nav ul li a a:focus {
+                text-decoration: none;
+                border: 0; } }
 
 .about {
   max-width: 1600px;
